--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cmsprac",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  
   "dependencies": {
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.3"
