--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node index.js",
-  "dev": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "hbs": "^4.2.0",
     "mysql2": "^3.15.3"
   }
 }
